--- a/FireFly-simpy.ipynb
+++ b/FireFly-simpy.ipynb
@@ -2,13 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "567eaa5a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Distributed Glowworm Optimization Scheme\n",
-    "### Wiki: https://en.wikipedia.org/wiki/Glowworm_swarm_optimization\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import simpy\n",
@@ -334,7 +332,7 @@
     "##############################################################################\n",
     "# GSO FUNCTIONS \n",
     "##############################################################################\n",
-    "class Glowworm:\n",
+    "class firefly:\n",
     "    def __init__(self, env, name, swarm, X=np.array([1, 1]), waypoint = np.array([1, 1]),  speed=1.5433, \n",
     "                 transRange=300, locationErrorRate=0.0, score = 0.0):\n",
     "        self.env = env\n",
@@ -355,7 +353,7 @@
     "\n",
     "\n",
     "    def sensing(self): # \n",
-    "        \"\"\"accquire the fitness of worm's current position to calculate 'influence radius'.\"\"\"\n",
+    "        \"\"\"accquire the fitness of node's current position to calculate 'influence radius'.\"\"\"\n",
     "        self.score = fitness_function(self.X[0],self.X[1])\n",
     "        # if found a better score\n",
     "        if self.score > self.influenceTable[self.name]['score']:\n",
@@ -377,20 +375,20 @@
     "\n",
     "\n",
     "    def broadcast(self):\n",
-    "        \"\"\"If worm j is within worm j's radius, record distance; else 0. For influence martrix\"\"\"\n",
-    "        for glowworm in self.swarm:\n",
-    "            distance =  np.linalg.norm(self.X-glowworm.X)\n",
+    "        \"\"\"If node j is within node j's radius, record distance; else 0. For influence martrix\"\"\"\n",
+    "        for firefly in self.swarm:\n",
+    "            distance =  np.linalg.norm(self.X-firefly.X)\n",
     "            if distance <= self.transmission_range: # Changed from self.score\n",
-    "                if glowworm.name != self.name:\n",
-    "                    errorPoint = locating_error(self.X,glowworm.X, self.locationErrorRate)\n",
+    "                if firefly.name != self.name:\n",
+    "                    errorPoint = locating_error(self.X,firefly.X, self.locationErrorRate)\n",
     "                    polar_cor = to_relative_polar(self.X, errorPoint)\n",
     "                    msgInfluenceTable = self.prepareMsgToSend()\n",
-    "                    glowworm.receive(self.name, msgInfluenceTable, polar_cor) \n",
+    "                    firefly.receive(self.name, msgInfluenceTable, polar_cor) \n",
     "\n",
     "\n",
-    "    def receive(self, worm_name, worm_msgInfluenceTable, polar_cor):\n",
+    "    def receive(self, node_name, node_msgInfluenceTable, polar_cor):\n",
     "        \"\"\"update the influenceTable\"\"\"\n",
-    "        for key, value in worm_msgInfluenceTable.items():\n",
+    "        for key, value in node_msgInfluenceTable.items():\n",
     "            tableEntry_name = key\n",
     "            tableEntry_distance = value['distance']\n",
     "            tableEntry_score = value['score']\n",
@@ -402,25 +400,25 @@
     "            \n",
     "\n",
     "    # def nextWaypoint(self):\n",
-    "    #     \"\"\"Calculate the worm's next waypoint based on the Table of influences.\"\"\"\n",
-    "    #     \"\"\"Weighted Randomly select the worm from a group\"\"\"\n",
+    "    #     \"\"\"Calculate the node's next waypoint based on the Table of influences.\"\"\"\n",
+    "    #     \"\"\"Weighted Randomly select the node from a group\"\"\"\n",
     "    #     new_position = np.array([0.0, 0.0])\n",
-    "    #     potentialWormList = []\n",
+    "    #     potentialnodeList = []\n",
     "    #     scoreDiffList = []\n",
-    "    #     for glowworm_name in self.influenceTable:\n",
-    "    #         glowworm_score = self.influenceTable[glowworm_name]['score']\n",
-    "    #         glowworm_angle = self.influenceTable[glowworm_name]['angle']\n",
-    "    #         glowworm_distance = self.influenceTable[glowworm_name]['distance']\n",
-    "    #         if glowworm_distance != 0 and self.score < glowworm_score:\n",
-    "    #             scoreDiffList.append(glowworm_score - self.score)\n",
-    "    #             potentialWormList.append([glowworm_distance,glowworm_angle])\n",
+    "    #     for firefly_name in self.influenceTable:\n",
+    "    #         firefly_score = self.influenceTable[firefly_name]['score']\n",
+    "    #         firefly_angle = self.influenceTable[firefly_name]['angle']\n",
+    "    #         firefly_distance = self.influenceTable[firefly_name]['distance']\n",
+    "    #         if firefly_distance != 0 and self.score < firefly_score:\n",
+    "    #             scoreDiffList.append(firefly_score - self.score)\n",
+    "    #             potentialnodeList.append([firefly_distance,firefly_angle])\n",
     "\n",
     "    #     if len(scoreDiffList) != 0:\n",
-    "    #         # Make a weighted random choice of worm\n",
+    "    #         # Make a weighted random choice of node\n",
     "    #         total = sum(scoreDiffList)\n",
     "    #         probabilities = [element / total for element in scoreDiffList]\n",
-    "    #         chosenWorm = weighted_random_choice(potentialWormList, probabilities)\n",
-    "    #         new_position = to_cartesian(chosenWorm, self.X)\n",
+    "    #         chosennode = weighted_random_choice(potentialnodeList, probabilities)\n",
+    "    #         new_position = to_cartesian(chosennode, self.X)\n",
     "\n",
     "    #         # Add random jitter\n",
     "    #         jitter_x = max_jitter * np.random.rand() * np.random.randint(-100,200)\n",
@@ -438,29 +436,29 @@
     "\n",
     "\n",
     "    def nextWaypoint(self): \n",
-    "        \"\"\"Calculate the worm's next waypoint based on the Table of influences.\"\"\"\n",
-    "        \"\"\"Choose the best worm\"\"\"\n",
+    "        \"\"\"Calculate the node's next waypoint based on the Table of influences.\"\"\"\n",
+    "        \"\"\"Choose the best node\"\"\"\n",
     "        new_position = np.array([0.0, 0.0])\n",
-    "        potentialWormList = []\n",
+    "        potentialnodeList = []\n",
     "        scoreDiffList = []\n",
-    "        for glowworm_name in self.influenceTable:\n",
-    "            glowworm_score = self.influenceTable[glowworm_name]['score']\n",
-    "            glowworm_angle = self.influenceTable[glowworm_name]['angle']\n",
-    "            glowworm_distance = self.influenceTable[glowworm_name]['distance']\n",
-    "            if glowworm_distance != 0 and self.score < glowworm_score:\n",
-    "                scoreDiffList.append(glowworm_score - self.score)\n",
-    "                potentialWormList.append([glowworm_distance,glowworm_angle])\n",
+    "        for firefly_name in self.influenceTable:\n",
+    "            firefly_score = self.influenceTable[firefly_name]['score']\n",
+    "            firefly_angle = self.influenceTable[firefly_name]['angle']\n",
+    "            firefly_distance = self.influenceTable[firefly_name]['distance']\n",
+    "            if firefly_distance != 0 and self.score < firefly_score:\n",
+    "                scoreDiffList.append(firefly_score - self.score)\n",
+    "                potentialnodeList.append([firefly_distance,firefly_angle])\n",
     "\n",
     "        if len(scoreDiffList) != 0:\n",
-    "            # # Make a weighted random choice of worm\n",
+    "            # # Make a weighted random choice of node\n",
     "            # total = sum(scoreDiffList)\n",
     "            # probabilities = [element / total for element in scoreDiffList]\n",
-    "            # chosenWorm = weighted_random_choice(potentialWormList, probabilities)\n",
-    "            # new_position = to_cartesian(chosenWorm, self.X)\n",
+    "            # chosennode = weighted_random_choice(potentialnodeList, probabilities)\n",
+    "            # new_position = to_cartesian(chosennode, self.X)\n",
     "\n",
     "            # Make choice only the best one\n",
-    "            chosenWorm = potentialWormList[scoreDiffList.index(max(scoreDiffList))]\n",
-    "            new_position = to_cartesian(chosenWorm, self.X)\n",
+    "            chosennode = potentialnodeList[scoreDiffList.index(max(scoreDiffList))]\n",
+    "            new_position = to_cartesian(chosennode, self.X)\n",
     "            \n",
     "            # Bound checking\n",
     "            new_position[0] = keep_in_bounds(new_position[0], dims)\n",
@@ -496,7 +494,7 @@
     "        i = 0\n",
     "        while True:\n",
     "            #print(\"Time \", i)\n",
-    "            # Compute glowworm logic\n",
+    "            # Compute firefly logic\n",
     "            self.sensing()\n",
     "            if i%5 == 0:\n",
     "                self.broadcast()\n",
@@ -514,35 +512,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ddd906e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def starting_points_random(num_worms):\n",
-    "    \"\"\"Initialize the worm positions randomly.\"\"\"\n",
-    "    return np.random.rand(num_worms, 2) * dims\n",
+    "def starting_points_random(num_nodes):\n",
+    "    \"\"\"Initialize the node positions randomly.\"\"\"\n",
+    "    return np.random.rand(num_nodes, 2) * dims\n",
     "\n",
-    "def starting_points(num_worms):\n",
+    "def starting_points(num_nodes):\n",
     "    \"\"\"Evenly distribute particles on a grid within the search space.\"\"\"\n",
-    "    list_glowworm = []\n",
+    "    list_firefly = []\n",
     "    start = 0.1 * dims\n",
     "    end = 0.9 * dims\n",
     "    \n",
     "    # Determine the number of rows and columns based on the number of particles\n",
-    "    n_side = int(np.ceil(np.sqrt(num_worms)))  # Number of rows and columns in the grid\n",
+    "    n_side = int(np.ceil(np.sqrt(num_nodes)))  # Number of rows and columns in the grid\n",
     "    x_coords = np.linspace(start, end, n_side)\n",
     "    y_coords = np.linspace(start, end, n_side)\n",
     "\n",
     "    # Create particles and assign grid positions\n",
-    "    for i in range(num_worms):\n",
+    "    for i in range(num_nodes):\n",
     "        # Calculate grid coordinates (i.e., row and column)\n",
     "        row = i // n_side\n",
     "        col = i % n_side\n",
     "        grid_position = np.array([x_coords[col], y_coords[row]])  # Assign grid position\n",
-    "        list_glowworm.append(grid_position)\n",
+    "        list_firefly.append(grid_position)\n",
     "    \n",
-    "    return np.array(list_glowworm)\n",
+    "    return np.array(list_firefly)\n",
     "\n",
     "def starting_points_spiral(num_nodes: int):\n",
     "    \"\"\"\n",
@@ -601,31 +599,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "7ed4d7b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_gso_simpy(AUVnum=25,transmissionRange=190):\n",
     "    \"\"\"\n",
-    "    Sets up the SimPy environment, runs the glowworm process,\n",
+    "    Sets up the SimPy environment, runs the firefly process,\n",
     "    and returns the recorded positions.\n",
     "    \"\"\"\n",
     "    sim_env = simpy.Environment()\n",
     "\n",
     "    # Initial population\n",
-    "    num_worms = AUVnum\n",
+    "    num_nodes = AUVnum\n",
     "    T_R = transmissionRange\n",
-    "    pop = starting_points(num_worms)\n",
+    "    pop = starting_points(num_nodes)\n",
     "\n",
     "    # Create and start the GSO process\n",
     "    swarm = []    \n",
-    "    for i in range(num_worms):\n",
-    "        swarm.append(Glowworm(env = sim_env, name = i, transRange = transmissionRange, swarm = [], \n",
+    "    for i in range(num_nodes):\n",
+    "        swarm.append(firefly(env = sim_env, name = i, transRange = transmissionRange, swarm = [], \n",
     "                              X=pop[i], waypoint = pop[i]+np.random.uniform(-50, 50, size=2)))\n",
     "\n",
-    "    for glowworm in swarm:\n",
-    "        glowworm.swarm = swarm  # Give each glowworm the list of all glowworm\n",
+    "    for firefly in swarm:\n",
+    "        firefly.swarm = swarm  # Give each firefly the list of all firefly\n",
     "        #particle.target = [target_position,target_fitness]\n",
     "\n",
     "    # Run the simulation\n",
@@ -633,12 +631,12 @@
     "    sim_env.run(until=termination_event)  # Simulation stops when termination_event is triggered\n",
     "\n",
     "    swarm_positions = []\n",
-    "    for glowworm in swarm:\n",
-    "        swarm_positions.append(glowworm.positions)\n",
+    "    for firefly in swarm:\n",
+    "        swarm_positions.append(firefly.positions)\n",
     "\n",
-    "    count_within_radius = sum(np.linalg.norm(glowworm.X - np.array([x_max, y_max])) <= 10 for glowworm in swarm)\n",
+    "    count_within_radius = sum(np.linalg.norm(firefly.X - np.array([x_max, y_max])) <= 10 for firefly in swarm)\n",
     "\n",
-    "    return swarm_positions,count_within_radius/num_worms, sim_env.now"
+    "    return swarm_positions,count_within_radius/num_nodes, sim_env.now"
    ]
   },
   {
@@ -699,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "c47f2fce",
    "metadata": {},
    "outputs": [
@@ -735,7 +733,7 @@
     "ax.clabel(contours, inline=True, fontsize=8, fmt=\"%.0f\")\n",
     "x_list = []\n",
     "y_list = []\n",
-    "for j in range(num_worms):\n",
+    "for j in range(num_nodes):\n",
     "    x_list.append(all_positions[j][i][0])\n",
     "    y_list.append(all_positions[j][i][1])\n",
     "p_plot = ax.scatter(x_list, y_list, marker='o', color='blue', alpha=0.5)\n",
@@ -744,13 +742,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "67ef5d7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "ll = []\n",
-    "for j in range(num_worms):\n",
+    "for j in range(num_nodes):\n",
     "    ll.append([all_positions[j][63][0],all_positions[j][63][1]])"
    ]
   },
@@ -817,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "id": "cb9929fe",
    "metadata": {},
    "outputs": [
@@ -851,7 +849,7 @@
     "contours = ax.contour(x, y, z, 10, colors='black', alpha=0.4)\n",
     "ax.clabel(contours, inline=True, fontsize=8, fmt=\"%.0f\")\n",
     "\n",
-    "for j in range(num_worms):\n",
+    "for j in range(num_nodes):\n",
     "    p_plot = ax.scatter(ll[j][0], ll[j][1], marker='o', color='blue', alpha=0.5)\n",
     "plt.show()"
    ]
