--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "d2b46c17",
    "metadata": {},
    "outputs": [],
@@ -99,21 +99,21 @@
     "#     y = (yy+120)/200\n",
     "#     return 16 - ((x-3.14)**2 + (y-2.72)**2 + np.sin(3*x+1.41) + np.sin(4*y-1.73))\n",
     "\n",
-    "# def fitness_function(x, y): # Three-Hump Camel\n",
-    "#     x1 = x/180 - 2.9\n",
-    "#     x2 = y/180 - 2.9\n",
-    "#     # The formula for the Three-Hump Camel function\n",
-    "#     f_x = np.log(2 * x1**2 - 1.05 * x1**4 + (x1**6) / 6 + x1 * x2 + x2**2)\n",
-    "#     return (5-f_x)/10\n",
-    "\n",
-    "def Three_Hump(x1,x2):\n",
-    "    return np.log(2 * x1**2 - 1.05 * x1**4 + (x1**6) / 6 + x1 * x2 + x2**2)\n",
-    "\n",
-    "def fitness_function(x, y, drift=0): # Three-Hump Camel\n",
-    "    x1 = x/180 - 2.77\n",
-    "    x2 = (y-drift)/180 - 2.77\n",
+    "def fitness_function(x, y): # Three-Hump Camel\n",
+    "    x1 = x/180 - 2.777\n",
+    "    x2 = y/180 - 2.777\n",
     "    # The formula for the Three-Hump Camel function\n",
-    "    return (5-Three_Hump(x1,x2))/10\n",
+    "    f_x = np.log(2 * x1**2 - 1.05 * x1**4 + (x1**6) / 6 + x1 * x2 + x2**2)\n",
+    "    return (5-f_x)/10\n",
+    "\n",
+    "# def Three_Hump(x1,x2):\n",
+    "#     return np.log(2 * x1**2 - 1.05 * x1**4 + (x1**6) / 6 + x1 * x2 + x2**2)\n",
+    "\n",
+    "# def fitness_function(x, y, drift=0): # Three-Hump Camel\n",
+    "#     x1 = x/180 - 2.77\n",
+    "#     x2 = (y-drift)/180 - 2.77\n",
+    "#     # The formula for the Three-Hump Camel function\n",
+    "#     return (5-Three_Hump(x1,x2))/10\n",
     "\n",
     "# def rotate_Three_Hump(x1,x2):\n",
     "#     temp = x1\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "7cdace73",
    "metadata": {},
    "outputs": [],
@@ -229,9 +229,9 @@
     "##############################################################################\n",
     "x, y = np.array(np.meshgrid(np.linspace(0, dims, dims), np.linspace(0, dims, dims)))\n",
     "z = fitness_function(x, y)\n",
-    "x_min, y_min = x.ravel()[z.argmin()], y.ravel()[z.argmin()]\n",
+    "# x_min, y_min = x.ravel()[z.argmin()], y.ravel()[z.argmin()]\n",
     "x_max, y_max = x.ravel()[z.argmax()], y.ravel()[z.argmax()]\n",
-    "min_fitness = fitness_function(x_min, y_min)\n",
+    "# min_fitness = fitness_function(x_min, y_min)\n",
     "max_fitness = fitness_function(x_max, y_max)"
    ]
   },
@@ -364,6 +364,7 @@
     "        self.transmission_range = transRange\n",
     "        self.speed = speed # 0.015433 -> 3 knots\n",
     "        self.waypoint = waypoint\n",
+    "        self.locationErrorRate = locationErrorRate\n",
     "        \n",
     "\n",
     "        self.X = X\n",
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ddd906e6",
    "metadata": {},
    "outputs": [],
@@ -547,8 +548,8 @@
     "def starting_points(num_worms):\n",
     "    \"\"\"Evenly distribute particles on a grid within the search space.\"\"\"\n",
     "    list_glowworm = []\n",
-    "    start = 0.1 * dims\n",
-    "    end = 0.9 * dims\n",
+    "    start = 0.05 * dims\n",
+    "    end = 0.95 * dims\n",
     "    \n",
     "    # Determine the number of rows and columns based on the number of particles\n",
     "    n_side = int(np.ceil(np.sqrt(num_worms)))  # Number of rows and columns in the grid\n",
@@ -604,12 +605,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "3cabac0a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_termination_condition(sim_env, particles, target_position, threshold=1.0, radius=5):\n",
+    "def check_termination_condition(sim_env, particles, target_position, threshold=1.0, radius=10):\n",
     "    while True:\n",
     "        count_within_radius = sum(\n",
     "            np.linalg.norm(p.X - target_position) <= radius for p in particles\n",
