Connectivity & Update ff

--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "567eaa5a",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d274d306",
    "metadata": {},
    "outputs": [],
@@ -870,6 +870,48 @@
     "for j in range(num_worms):\n",
     "    p_plot = ax.scatter(ll[j][0], ll[j][1], marker='o', color='blue', alpha=0.5)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0d226580",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0   0   0   0   0   4]\n",
+      " [  0   4   4   8   8  12]\n",
+      " [  4   8  12  20  20  28]\n",
+      " [  8  12  20  28  36  48]\n",
+      " [ 12  20  36  44  60  80]\n",
+      " [ 20  36  48  68  88 112]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [5,6,7,8,9,10]\n",
+    "TR_list = [100,200,300,400,500,600]\n",
+    "l = dims*0.9\n",
+    "LiLi = []\n",
+    "for i in nums:\n",
+    "    Li = []\n",
+    "    for j in TR_list:\n",
+    "        count = -1\n",
+    "        DisToNeighbor = l/(i-1)\n",
+    "        hop = int(j/DisToNeighbor)\n",
+    "        pointsList = []\n",
+    "        for a in range(-hop, hop+1):\n",
+    "            for b in range(-hop, hop+1):\n",
+    "                pointsList.append([a*DisToNeighbor,b*DisToNeighbor])\n",
+    "        for point in pointsList:\n",
+    "            if np.linalg.norm(np.array(point))<=j:\n",
+    "                count = count + 1\n",
+    "        Li.append(count)\n",
+    "    LiLi.append(Li)\n",
+    "print(np.array(LiLi).T)"
    ]
   }
  ],
